# RoboNeuron

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
config/: mcporter.json  vla_models.json
configs/: robot_profiles.json  vla_accel_presets.json  vla_models.json
docs/: development-roadmap.md  product-roadmap.md  roadmap.md  roboneuron-structure-and-roadmap.md  roboneuron_project_status_and_usage_2026-02-28.md
examples/basic/: dummy_robot.py
mcptoollib/: control_mcp.py  eecommand_mcptool.py  infer_mcp.py  perception_mcp.py  simulation_mcp.py  twist_mcptool.py
openclaw/skills/roboneuron/: SKILL.md
ros/custom_msgs/: CMakeLists.txt  package.xml
ros/custom_msgs/msg/: EECommand.msg
ros/roboneuron_franka_bridge/: CMakeLists.txt  package.xml
ros/roboneuron_franka_bridge/src/: franka_joint_impedance_pipe_bridge.cpp
ros/roboneuron_interfaces/: CMakeLists.txt  package.xml
ros/roboneuron_interfaces/msg/: EEFDeltaCommand.msg  RawActionChunk.msg  TaskSpaceState.msg
scripts/: setup_openvla_oft_runtime.sh  setup_openvla_runtime.sh
scripts/openclaw/: _roboneuron_mcp_common.sh  roboneuron-mcp-control.sh  roboneuron-mcp-eef-delta.sh  roboneuron-mcp-perception.sh  roboneuron-mcp-twist.sh  roboneuron-mcp-vla.sh
src/roboneuron_backends/: __init__.py
src/roboneuron_backends/franka/: __init__.py  pipe_bridge_adapter.py  profile.py
src/roboneuron_core/: __init__.py
src/roboneuron_core/adapters/: __init__.py
src/roboneuron_core/cli/: local_validation.py  mcp_entrypoints.py  mcp_tool_generator.py
src/roboneuron_core/kernel/: __init__.py  action_semantics.py  contracts.py  health.py  profile.py  session.py
src/roboneuron_core/runtime/: __init__.py  openvla_client.py  openvla_oft_client.py  openvla_oft_protocol.py  openvla_oft_worker.py  openvla_protocol.py  openvla_worker.py
src/roboneuron_core/servers/: control_server.py  perception_server.py  simulation_server.py  vla_server.py
src/roboneuron_core/types/: __init__.py  control.py  inference.py  messaging.py  perception.py  simulation.py
src/roboneuron_core/utils/: __init__.py  control_runtime.py  eef_delta.py  msg_parser.py  raw_action_chunk.py  task_space_state.py
src/roboneuron_edge/: __init__.py
src/roboneuron_edge/runtime/: __init__.py  control_runtime.py
src/roboneuron_edge/servers/: __init__.py  control_server.py
src/roboneuron_edge/state/: __init__.py  task_space_alignment.py
templates/: mcptool_template.jinja2
tests/: fake_openvla_oft_worker.py  fake_openvla_worker.py  test_action_semantics.py  test_control_runtime.py  test_control_server_host_status.py  test_core_edge_split_smoke.py  test_distributed_core_edge_lane_smoke.py  test_dummy_adapters.py  test_eef_delta_control_live_ros.py  test_eef_delta_control_ros.py  test_eef_delta_mcp_ros.py  test_kernel_primitives.py  test_local_validation_cli.py  test_mcp_cli_entrypoints.py  test_openvla_oft_deploy_smoke.py  test_openvla_oft_subprocess_client.py  test_openvla_oft_worker_loading.py  test_openvla_oft_wrapper_runtime.py  test_openvla_subprocess_client.py  test_openvla_worker_loading.py  test_openvla_wrapper_runtime.py  test_perception_server.py  test_raw_action_chunk_utils.py  test_task_space_state_utils.py  test_twist_mcp_ros.py  test_vla_model_resolution.py  test_vla_server_dummy.py  test_vla_server_local_test.py  test_vla_server_observation_building.py
tests/unit/: test_calvin_adapter.py  test_mcp_cli_entrypoints.py
translator/: generator.py  msg_parser.py
vla_src/openvla/: README.md  pyproject.toml
vla_src/openvla/scripts/: generate.py  preprocess.py  pretrain.py
vla_src/openvla/vla-scripts/: deploy.py  finetune.py  train.py
vla_src/openvla_oft/: README.md
vla_src/openvla_oft/vla-scripts/: deploy.py  finetune.py  merge_lora_weights_and_save.py
wrapper/camera_wrapper/: __init__.py  base.py  realsense.py
wrapper/robot_wrapper/: __init__.py  base.py  libero_adapter.py
wrapper/vla_wrapper/: __init__.py  base.py  openvla.py  openvla_fastv.py  openvla_oft.py
(+116 files in other folders)
